add docker and pipeline_loop

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "98b04d35",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
     "# ----------------------------\n",
     "# Cell 1: Setup (ติดตั้ง libs)\n",
     "# ----------------------------\n",
-    "!pip install ultralytics opencv-python-headless pandas matplotlib seaborn streamlit schedule scikit-learn statsmodels prophet google-api-python-client google-auth google-auth-oauthlib"
+    "%pip install ultralytics opencv-python-headless pandas matplotlib seaborn streamlit schedule scikit-learn statsmodels prophet google-api-python-client google-auth google-auth-oauthlib"
    ]
   },
   {
